--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.0",
     "@expo-google-fonts/rubik": "^0.2.0",
+    "@expo/vector-icons": "^12.0.5",
     "@hookform/resolvers": "^2.6.1",
     "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/masked-view": "0.1.10",
@@ -19,20 +20,23 @@
     "expo-app-loading": "^1.1.2",
     "expo-font": "~9.2.1",
     "expo-linear-gradient": "~9.2.0",
+    "expo-local-authentication": "~11.1.1",
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
-    "expo-updates": "~0.8.1",
+    "expo-updates": "~0.8.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-hook-form": "^7.11.0",
     "react-native": "~0.63.4",
+    "react-native-awesome-alerts": "^1.5.2",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-reanimated": "~2.2.0",
     "react-native-responsive-fontsize": "^0.5.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
-    "react-native-unimodules": "~0.14.5",
+    "react-native-svg": "^12.1.1",
+    "react-native-unimodules": "~0.14.6",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.13.12",
     "styled-components": "^5.3.0",
@@ -48,6 +52,7 @@
     "@types/styled-components": "^5.1.11",
     "@types/styled-components-react-native": "^5.1.1",
     "jest-expo": "^42.0.1",
+    "react-native-svg-transformer": "^0.14.3",
     "typescript": "~4.0.0"
   },
   "private": true
