--- a/app.json
+++ b/app.json
@@ -1,14 +1,20 @@
 {
   "expo": {
-    "name": "savepass",
+    "name": "SavePass",
     "slug": "savepass",
-    "version": "1.0.0",
+    "version": "1.3.0",
     "assetBundlePatterns": [
       "**/*"
     ],
     "packagerOpts": {
       "config": "metro.config.js",
-      "sourceExts": ["js", "jsx", "ts", "tsx", "svg"]
+      "sourceExts": [
+        "js",
+        "jsx",
+        "ts",
+        "tsx",
+        "svg"
+      ]
     },
     "icon": "./assets/images/icon.png",
     "splash": {
@@ -20,7 +26,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#1967FB"
-      }
+      },
+      "package": "com.kauerecio.savepass"
     }
   },
   "name": "savepass"
