--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
-    "date-fns": "^2.28.0",
     "expo": "~42.0.1",
     "expo-app-loading": "^1.1.2",
     "expo-font": "~9.2.1",
@@ -30,6 +29,7 @@
     "react-hook-form": "^7.11.0",
     "react-native": "~0.63.4",
     "react-native-awesome-alerts": "^1.5.2",
+    "react-native-custom-slider": "^1.0.2",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-modalize": "^2.0.13",
@@ -41,6 +41,7 @@
     "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.13.12",
     "styled-components": "^5.3.0",
+    "ts-password-generator": "^1.0.6",
     "yup": "^0.32.9",
     "zxcvbn": "^4.4.2"
   },
