--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native": "~0.63.4",
     "react-native-awesome-alerts": "^1.5.2",
     "react-native-custom-slider": "^1.0.2",
+    "react-native-flash-message": "^0.2.1",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-modalize": "^2.0.13",
