--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-hook-form": "^7.11.0",
-    "react-native": "~0.63.4",
+    "react-native": "^0.67.2",
     "react-native-awesome-alerts": "^1.5.2",
     "react-native-custom-slider": "^1.0.2",
     "react-native-flash-message": "^0.2.1",
